--- a/CustomsGestionHoteliere/CustomsGestionHoteliere.csproj
+++ b/CustomsGestionHoteliere/CustomsGestionHoteliere.csproj
@@ -33,30 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bunifu.UI.WinForms.BunifuPages">
-      <HintPath>..\..\..\..\..\Desktop\controle\bunifu\Bunifu.UI.WinForms.BunifuPages.dll</HintPath>
-    </Reference>
     <Reference Include="Bunifu_UI_v1.5.3">
-      <HintPath>..\..\..\..\Downloads\Compressed\Bunifu-Browser-master\Bunifu-Browser-master\Bunifu Browser\bin\Debug\Bunifu_UI_v1.5.3.dll</HintPath>
+      <HintPath>D:\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
-    <Reference Include="DevExpress.CodeParser.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Data.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.DataAccess.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.Office.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Printing.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.RichEdit.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Xpo.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="Guna.UI">
-      <HintPath>..\..\..\..\..\Downloads\Telegram Desktop\Guna.UI\Guna.UI.dll</HintPath>
+      <HintPath>D:\Guna.UI.dll</HintPath>
     </Reference>
     <Reference Include="Guna.UI2">
-      <HintPath>..\..\..\..\Downloads\Compressed\YoutubeMacDemo\YoutubeMacDemo\bin\Debug\Guna.UI2.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Telegram Desktop\Guna.UI2.dll</HintPath>
     </Reference>
     <Reference Include="MaterialSkin">
-      <HintPath>..\..\..\..\Desktop\controle\MaterialSkin.dll</HintPath>
-    </Reference>
-    <Reference Include="MetroFramework">
-      <HintPath>..\..\..\..\Desktop\controle\MetroFramework.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Telegram Desktop\MaterialSkin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -213,6 +200,12 @@
     <Compile Include="encientTravail\splashsreen.Designer.cs">
       <DependentUpon>splashsreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSplachScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSplachScreen.Designer.cs">
+      <DependentUpon>FormSplachScreen.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="encientTravail\enregistreClient.resx">
       <DependentUpon>enregistreClient.cs</DependentUpon>
     </EmbeddedResource>
@@ -276,6 +269,9 @@
     </Compile>
     <EmbeddedResource Include="encientTravail\splashsreen.resx">
       <DependentUpon>splashsreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSplachScreen.resx">
+      <DependentUpon>FormSplachScreen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="encientTravail\gset_hotelDataSet.xsc">
       <DependentUpon>gset_hotelDataSet.xsd</DependentUpon>
